Add addMovie component, Finish all the Level 2 requirement

--- a/public/style.css
+++ b/public/style.css
@@ -24,7 +24,12 @@ body {
   margin-left: 20px;
   cursor: pointer;
 }
+
 .reset-button:hover {
   color: green;
+}
+
+.add-movie {
+  margin-bottom: 30px;
 }
 
